docs/provider-grafana/0.1/grafana/v1alpha1/report.md
---
permalink: /provider-grafana/0.1/grafana/v1alpha1/report/
---

# grafana.v1alpha1.report

"Report is the Schema for the Reports API"

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withDashboardId(dashboardId)`](#fn-specforproviderwithdashboardid)
    * [`fn withIncludeDashboardLink(includeDashboardLink)`](#fn-specforproviderwithincludedashboardlink)
    * [`fn withIncludeTableCsv(includeTableCsv)`](#fn-specforproviderwithincludetablecsv)
    * [`fn withLayout(layout)`](#fn-specforproviderwithlayout)
    * [`fn withMessage(message)`](#fn-specforproviderwithmessage)
    * [`fn withName(name)`](#fn-specforproviderwithname)
    * [`fn withOrientation(orientation)`](#fn-specforproviderwithorientation)
    * [`fn withRecipients(recipients)`](#fn-specforproviderwithrecipients)
    * [`fn withRecipientsMixin(recipients)`](#fn-specforproviderwithrecipientsmixin)
    * [`fn withReplyTo(replyTo)`](#fn-specforproviderwithreplyto)
    * [`fn withSchedule(schedule)`](#fn-specforproviderwithschedule)
    * [`fn withScheduleMixin(schedule)`](#fn-specforproviderwithschedulemixin)
    * [`fn withTimeRange(timeRange)`](#fn-specforproviderwithtimerange)
    * [`fn withTimeRangeMixin(timeRange)`](#fn-specforproviderwithtimerangemixin)
    * [`obj spec.forProvider.schedule`](#obj-specforproviderschedule)
      * [`fn withCustomInterval(customInterval)`](#fn-specforproviderschedulewithcustominterval)
      * [`fn withEndTime(endTime)`](#fn-specforproviderschedulewithendtime)
      * [`fn withFrequency(frequency)`](#fn-specforproviderschedulewithfrequency)
      * [`fn withStartTime(startTime)`](#fn-specforproviderschedulewithstarttime)
      * [`fn withWorkdaysOnly(workdaysOnly)`](#fn-specforproviderschedulewithworkdaysonly)
    * [`obj spec.forProvider.timeRange`](#obj-specforprovidertimerange)
      * [`fn withFrom(from)`](#fn-specforprovidertimerangewithfrom)
      * [`fn withTo(to)`](#fn-specforprovidertimerangewithto)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
  * [`obj spec.providerRef`](#obj-specproviderref)
    * [`fn withName(name)`](#fn-specproviderrefwithname)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of Report

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"ReportSpec defines the desired state of Report"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external when this managed resource is deleted - either \"Delete\" or \"Orphan\" the external resource."

## obj spec.forProvider



### fn spec.forProvider.withDashboardId

```ts
withDashboardId(dashboardId)
```

"Dashboard to be sent in the report."

### fn spec.forProvider.withIncludeDashboardLink

```ts
withIncludeDashboardLink(includeDashboardLink)
```

"Whether to include a link to the dashboard in the report. Defaults to `true`."

### fn spec.forProvider.withIncludeTableCsv

```ts
withIncludeTableCsv(includeTableCsv)
```

"Whether to include a CSV file of table panel data. Defaults to `false`."

### fn spec.forProvider.withLayout

```ts
withLayout(layout)
```

"Layout of the report. `simple` or `grid` Defaults to `grid`."

### fn spec.forProvider.withMessage

```ts
withMessage(message)
```

"Message to be sent in the report."

### fn spec.forProvider.withName

```ts
withName(name)
```

"Name of the report."

### fn spec.forProvider.withOrientation

```ts
withOrientation(orientation)
```

"Orientation of the report. `landscape` or `portrait` Defaults to `landscape`."

### fn spec.forProvider.withRecipients

```ts
withRecipients(recipients)
```

"List of recipients of the report."

### fn spec.forProvider.withRecipientsMixin

```ts
withRecipientsMixin(recipients)
```

"List of recipients of the report."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withReplyTo

```ts
withReplyTo(replyTo)
```

"Reply-to email address of the report."

### fn spec.forProvider.withSchedule

```ts
withSchedule(schedule)
```

"Schedule of the report."

### fn spec.forProvider.withScheduleMixin

```ts
withScheduleMixin(schedule)
```

"Schedule of the report."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withTimeRange

```ts
withTimeRange(timeRange)
```

"Time range of the report."

### fn spec.forProvider.withTimeRangeMixin

```ts
withTimeRangeMixin(timeRange)
```

"Time range of the report."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.schedule

"Schedule of the report."

### fn spec.forProvider.schedule.withCustomInterval

```ts
withCustomInterval(customInterval)
```

"Custom interval of the report. **Note:** This field is only available when frequency is set to `custom`."

### fn spec.forProvider.schedule.withEndTime

```ts
withEndTime(endTime)
```

"End time of the report. If empty, the report will be sent indefinitely (according to frequency). Note that times will be saved as UTC in Grafana."

### fn spec.forProvider.schedule.withFrequency

```ts
withFrequency(frequency)
```

"Frequency of the report. One of `never`, `once`, `hourly`, `daily`, `weekly`, `monthly` or `custom`."

### fn spec.forProvider.schedule.withStartTime

```ts
withStartTime(startTime)
```

"Start time of the report. If empty, the start date will be set to the creation time. Note that times will be saved as UTC in Grafana."

### fn spec.forProvider.schedule.withWorkdaysOnly

```ts
withWorkdaysOnly(workdaysOnly)
```

"Whether to send the report only on work days. Defaults to `false`."

## obj spec.forProvider.timeRange

"Time range of the report."

### fn spec.forProvider.timeRange.withFrom

```ts
withFrom(from)
```

"Start of the time range."

### fn spec.forProvider.timeRange.withTo

```ts
withTo(to)
```

"End of the time range."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to create, observe, update, and delete this managed resource should be configured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerRef

"ProviderReference specifies the provider that will be used to create, observe, update, and delete this managed resource. Deprecated: Please use ProviderConfigReference, i.e. `providerConfigRef`"

### fn spec.providerRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a Secret to which any connection details for this managed resource should be written. Connection details frequently include the endpoint, username, and password required to connect to the managed resource."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."